--- a/MainApp/templates/MainApp/base.html
+++ b/MainApp/templates/MainApp/base.html
@@ -2,9 +2,10 @@
     <a href="{% url 'MainApp:index' %}">Learning Log</a>
     <a href="{% url 'MainApp:topics' %}">Topics</a>
 {% if user.is_authenticated %}
-    Hellom {{user.username}},
+    Hello {{user.username}},
     <a href="{% url 'users:logout' %}">Log out</a>
 {% else %}
+    <a href="{% url 'users:register' %}">Register</a>
     <a href="{% url 'users:login' %}">Log In</a>
 {% endif %}
 </p>
